# Cpp23_Module-Modular_Modern_Odds_Lib

./: README.md
ayejay-odds/: CMakeLists.txt  build.bat  build.cmd  build.sh
ayejay-odds/cmake/: EpochOptions.cmake
ayejay-odds/examples/: main.cpp
ayejay-odds/include/ayejay/: odds.hpp
project/: CMakePresets.json
project/modules/: ayejay.odds.cppm
